# RelayInnerDisplayScript

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  config.example.toml  install.sh  pyproject.toml  test_find_powerbutton_event.py  uninstall.sh
.pi/: lsp.json
docs/: proxmox-host-setup.md  tdd-cycle-workflow.md
relayinner_display/: __init__.py  bootstrap.py  config.py  daemon.py  input.py  ipc.py  kiosk.py  kiosk_launcher.py  models.py  proxmox.py  session.py
specs/: 10-proxmox-local-console-relay-core.md  11-cage-kiosk-session-shell.md  12-vm-power-state-to-host-dpms-control.md  13-host-power-button-to-guest-power-control.md  14-proxmox-host-runtime-and-bootstrap.md  15-mvp-integration-failure-policy-and-ops.md  16-proxmox-host-installation-flow-and-readme-quickstart.md  17-safe-uninstall-flow-and-readme-removal-guide.md  20-configurable-console-backend-contract.md  21-proxmox-local-vnc-backend.md  22-looking-glass-backend-and-preflight.md  30-moonlight-backend-contract-and-config.md  31-moonlight-pair-assist-and-persistent-workspace.md  32-moonlight-stream-launch-recovery-and-ops.md  40-moonlight-desktop-fast-path-and-pair-state-resilience.md  41-moonlight-client-resolution-override.md  50-kiosk-compositor-selection-contract.md  51-managed-sway-kiosk-runtime.md  52-moonlight-on-sway-support-matrix-and-ops.md  60-moonlight-live-pair-status-validation.md  70-tdd-cycle-bootstrap-policy-scaffold.md  71-repository-tdd-policy-and-test-command.md  72-first-spec-worktree-tdd-pilot.md  73-optional-coverage-non-regression-gate.md  README.md  (+10 more)
(+11 files in other folders)
