[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "relayinner-display"
version = "0.1.0"
description = "SPEC-10 runtime core for RelayInnerDisplayScript"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "OpenAI Codex" },
]

[project.scripts]
relayinner-displayd = "relayinner_display.daemon:main"
relayinner-display-session = "relayinner_display.session:main"

[tool.setuptools]
packages = ["relayinner_display"]
