[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "relayinner-display"
version = "0.1.0"
description = "SPEC-10/11/12/13/14/15 runtime core, ops policy, and host bootstrap for RelayInnerDisplayScript"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "OpenAI Codex" },
]
dependencies = [
  "evdev>=1.6",
]

[project.scripts]
relayinner-displayd = "relayinner_display.daemon:main"
relayinner-display-session = "relayinner_display.session:main"
relayinner-display-session-entrypoint = "relayinner_display.kiosk:main"

[tool.setuptools]
packages = ["relayinner_display"]
